Fix a bunch of deprecations